--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Simple Web Layout - Case 2</title>
     <link href="assets/css/normalize.css"rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="assets/css/fonts/css/all.css" rel="stylesheet">
 
     <style>
@@ -107,7 +110,7 @@
             border-left: 5px solid white;
             background-image: url("assets/gif/work.gif");
             background-size: cover;
-
+        }
 
         body>footer{
             height: 60px;
