--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -5,6 +5,20 @@
     <title>Case 3</title>
 </head>
 <body>
+<div>
+    <div></div>
+</div>
 
+<section>
+    <div></div>
+</section>
+
+<section>
+    <div></div>
+</section>
+
+<section>
+    <div></div>
+</section>
 </body>
 </html>
