--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -10,15 +10,15 @@
 </div>
 
 <section>
-    <div></div>
+    <div><p>Hello</p></div>
 </section>
 
 <section>
-    <div></div>
+    <div><p>Welcome to</p></div>
 </section>
 
 <section>
-    <div></div>
+    <div><p>Institute of Software Engineering</p></div>
 </section>
 </body>
 </html>
