--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Case 3</title>
+    <link href="assets/css/normalize.css" rel="stylesheet">
+    <style>
+        section{
+            position: relative;
+            height: 100vh;
+        }
+
+        div {
+            border-radius: 100%;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+        }
+    </style>
+
 </head>
 <body>
 <div>
