--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -18,6 +18,33 @@
             bottom: 0;
             margin: auto;
         }
+
+        body {
+            position: relative;
+        }
+
+        body > div {
+            position: fixed;
+            height: 202px;
+            width: 202px;
+            border: 15px solid red;
+            z-index: 10;
+        }
+
+        body > div > div {
+            position: fixed;
+            height: 230px;
+            width: 230px;
+            border: 15px solid grey;
+            z-index: 8;
+        }
+
+        section > div {
+            position: absolute;
+            height: 200px;
+            width: 200px;
+            z-index: 5;
+        }
     </style>
 
 </head>
