--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -45,6 +45,20 @@
             width: 200px;
             z-index: 5;
         }
+
+        body > section:nth-child(2) > div {
+            background: darkblue;
+        }
+
+        body > section:nth-child(3) > div {
+            background: deeppink;
+        }
+
+        body > section:nth-child(4) > div {
+            background: orange;
+        }
+
+        
     </style>
 
 </head>
