--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -58,7 +58,14 @@
             background: orange;
         }
 
-        
+        body>section>div>p{
+            text-align: center;
+            padding-top: 30px;
+            color: white;
+            font-family: Calibri, monospace;
+            font-size: 25px;
+            font-weight: bold;
+        }
     </style>
 
 </head>
