--- a/Assignment4/index.html
+++ b/Assignment4/index.html
@@ -8,7 +8,7 @@
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="assets/css/fonts/css/all.css" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         header{
             position: relative;
@@ -83,31 +83,24 @@
         main>section>section{
             height: 300px;
             position: relative;
+            display: flex;
         }
 
         main>section>section>div{
-            position: absolute;
-            height: 100%;
-            width: calc(100%/ 3);
+            flex-grow: 1;
         }
 
         main > section > section > div:nth-child(1) {
-            border-right: 5px solid white;
-            left: 0;
             background-image: url("assets/gif/work.gif");
             background-size: cover;
         }
 
         main > section > section > div:nth-child(2) {
-            border-left: 5px solid white;
-            left: calc(100% / 3);
             background-image: url("assets/gif/work.gif");
             background-size: cover;
         }
 
         main > section > section > div:nth-child(3) {
-            left: calc((100% / 3) * 2);
-            border-left: 5px solid white;
             background-image: url("assets/gif/work.gif");
             background-size: cover;
         }
@@ -125,6 +118,43 @@
            font-weight: bold;
         }
 
+        @media all and (max-width: 425px) {
+            header {
+                height: 87px;
+            }
+
+            header > img {
+                position: absolute;
+                left: 0;
+                right: 0;
+                margin: auto;
+                top: 10px;
+            }
+
+            header > ul {
+                right: 30px;
+                bottom: 10px;
+                left: 0;
+                right: 0;
+                font-size: 19px;
+                width: max-content;
+                margin: auto;
+                padding-left: 0;
+            }
+
+            main > nav {
+                display: none;
+            }
+
+            main > section {
+                margin-left: 0;
+            }
+
+            main > section > section {
+                flex-direction: column;
+                height: 699px;
+            }
+        }
 
 
 
